# ShellyWebServer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/skills/contrastive-dev/: SKILL.md
.github/skills/module-static-check/: SKILL.md
docs/: blocking_queue.md  lock.md  log.md  sql_connection_pool.md
include/: blocking_queue.h  log.h  sql_connection_pool.h
scripts/: blocking_queue_selftest.cpp  log_selftest.cpp  sql_connection_pool_selftest.cpp
src/: main.cpp
src/database/: sql_connection_pool.cpp
src/log/: log.cpp
src/utils/lock/: lock.h
